--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".UserActivity" />
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.UserActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
